--- a/index.html
+++ b/index.html
@@ -456,8 +456,8 @@
                             ))}
                         </div>
 
-                        {/* Floating Bottom Bar */}
-                        <div className="fixed bottom-0 left-0 right-0 bg-white border-t border-mauli-gold/30 p-4 shadow-[0_-4px_20px_rgba(0,0,0,0.1)] z-40 flex justify-between items-center md:justify-center md:gap-8">
+                        {/* Floating Bottom Bar - Updated for Mobile View */}
+                        <div className="fixed bottom-[70px] md:bottom-0 left-0 right-0 bg-white border-t border-mauli-gold/30 p-4 shadow-[0_-4px_20px_rgba(0,0,0,0.1)] z-40 flex justify-between items-center md:justify-center md:gap-8 transition-all duration-300">
                             <div className="text-sm font-bold text-gray-700">
                                 {Object.keys(cart).length} वस्तू निवडल्या (Items Selected)
                             </div>
